# pre-commit-mypy-poetry-sync-hook

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
pre_commit_mypy_poetry_sync_hook/: sync_mypy_additional_dependencies.py
tests/: pre-commit-config-exclude-dependencies.expectation.yaml  pre-commit-config-exclude-dependencies.yaml  pre-commit-config-existing-additional_dependencies.expectation.yaml  pre-commit-config-existing-additional_dependencies.yaml  pre-commit-config-no-additional_dependencies.expectation.yaml  pre-commit-config-no-additional_dependencies.yaml  pre-commit-config-no-mypy.expectation.yaml  pre-commit-config-no-mypy.yaml  pre-commit-config-only-dev-group.expectation.yaml  pre-commit-config-only-dev-group.yaml  test_sync-mypy-additional-dependencies.py
