[tool.poetry]
name = "pre-commit-mypy-poetry-sync-hook"
version = "0.1.0"
description = "A pre-commit hook to keep mypy pre-commit hook's additional_dependencies in sync with poetry"
authors = ["Martin Schulze <martin.schulze@e2m.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
